declarative_imperatives/create_network_policy_for_drill.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-lockdown
  namespace: restricted
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Allow DNS to CoreDNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

  # Allow all traffic to 1.1.1.1
  - to:
    - ipBlock:
        cidr: 1.1.1.1/32
